2022-10-23T16:32:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3307788080 # 162
* notice: last 14d: unq all: 2 28
* notice: prev accum: outdated-unq outdated-all / unq all: 58 187 / 73 216
* notice: next accum: outdated-unq outdated-all / unq all: 59 188 / 73 216
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-09] / []

2022-10-23T02:18:06Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3305495204 # 160
* notice: last 14d: unq all: 2 29
* notice: prev accum: outdated-unq outdated-all / unq all: 57 186 / 73 215
* notice: next accum: outdated-unq outdated-all / unq all: 58 187 / 73 216
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2022-10-08] / [2022-10-22]

2022-10-22T08:30:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3302605702 # 158
* notice: last 14d: unq all: 2 29
* notice: prev accum: outdated-unq outdated-all / unq all: 57 186 / 72 214
* notice: next accum: outdated-unq outdated-all / unq all: 57 186 / 73 215
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-22]

2022-10-22T02:05:58Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3301556656 # 157
* notice: last 14d: unq all: 2 28
* notice: prev accum: outdated-unq outdated-all / unq all: 57 186 / 71 212
* notice: next accum: outdated-unq outdated-all / unq all: 57 186 / 72 214
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +4 -0 -0 / 2 4
* notice: removed / changed dates: [] / [2022-10-21]

2022-10-21T16:36:23Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3299013108 # 156