@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-23T16:32:39Z",
+  "timestamp" : "2022-10-24T02:32:13Z",
   "count_outdated" : 188,
   "uniques_outdated" : 59,
-  "count" : 216,
-  "uniques" : 73,
+  "count" : 217,
+  "uniques" : 74,
   "clones" : [
     {
       "timestamp": "2022-10-10T00:00:00Z",
@@ -93,6 +93,13 @@
       "timestamp": "2022-10-22T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-23T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
