@@ -1,3 +1,11 @@
+2022-10-24T02:32:13Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3309578617 # 163
+* notice: last 14d: unq all: 2 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 59 188 / 73 216
+* notice: next accum: outdated-unq outdated-all / unq all: 59 188 / 74 217
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-10-23]
+
 2022-10-23T16:32:39Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3307788080 # 162
 * notice: last 14d: unq all: 2 28
